Implementado UpdateRoom
