# service/src/main/java/br/com/sw2you/realmeet/validator/RoomValidator.java
@@ -2,9 +2,12 @@ package br.com.sw2you.realmeet.validator;
 
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.*;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.*;
+import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.domain.repository.RoomRepository;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -20,7 +23,21 @@ public class RoomValidator {
         var validationErrors = new ValidationErrors();
 
         if (validateName(createRoomDTO.getName(), validationErrors) && validateSeats(createRoomDTO.getSeats(), validationErrors)) {
-            validateNameDuplicate(createRoomDTO.getName(), validationErrors);
+            validateNameDuplicate(null, createRoomDTO.getName(), validationErrors);
+        }
+
+        throwOnError(validationErrors);
+    }
+
+    public void validate(Long roomId, UpdateRoomDTO updateRoomDTO) {
+        var validationErrors = new ValidationErrors();
+
+        if (
+                validateRequired(roomId, ROOM_ID, validationErrors) &&
+                        validateName(updateRoomDTO.getName(), validationErrors) &&
+                        validateSeats(updateRoomDTO.getSeats(), validationErrors)
+        ) {
+            validateNameDuplicate(roomId, updateRoomDTO.getName(), validationErrors);
         }
 
         throwOnError(validationErrors);
@@ -38,10 +55,14 @@ public class RoomValidator {
                 validateMaxValue(seats, ROOM_SEATS, ROOM_SEATS_MAX_VALUE, validationErrors));
     }
 
-    private void validateNameDuplicate(String name, ValidationErrors validationErrors) {
+    private void validateNameDuplicate(Long roomIdToExclude, String name, ValidationErrors validationErrors) {
         roomRepository
                 .findByNameAndActive(name, true)
-                .ifPresent(__ -> validationErrors.add((new ValidationError(ROOM_NAME, ROOM_NAME + DUPLICATE))));
+                .ifPresent(room -> {
+                    if (!isNull(roomIdToExclude) && !Objects.equals(room.getId(), roomIdToExclude)) {
+                        validationErrors.add(new ValidationError(ROOM_NAME, ROOM_NAME + DUPLICATE));
+                    }
+                });
     }
 
 }
