# service/src/main/resources/api.yml
@@ -44,9 +44,36 @@ paths:
             format: int64
       responses:
         204:
-          description: 'Deleted successfully'
+          description: 'Deleted Successfully'
         404:
           description: Not Found
+
+    put:
+      summary: 'Update a room by ID'
+      operationId: updateRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the room
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateRoomDTO'
+        required: true
+      responses:
+        204:
+          description: 'Update Successfully'
+        404:
+          description: Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
 
   /rooms:
     post:
@@ -69,15 +96,22 @@ paths:
                 $ref: '#/components/schemas/RoomDTO'
         422:
           $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
-    CreateRoomDTO:
+    UpdateRoomDTO:
       type: object
       properties:
         name:
           type: string
         seats:
           type: integer
+
+    CreateRoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateRoomDTO'
+
     RoomDTO:
       type: object
       allOf:
@@ -87,6 +121,7 @@ components:
             id:
               type: integer
               format: int64
+
     ResponseError:
       type: object
       required:
@@ -97,6 +132,7 @@ components:
           type: string
         errorCode:
           type: string
+
   responses:
     UnprocessableEntity:
       description: The server understands the content tpe of the request entity but was unable to process the
